# kindle-dash-gen

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  pyproject.toml
.claude/: CLAUDE.md  architecture.md  style-guide.md
.claude/context/: testing.md
docs/: plugins.md  sources.md
kindle_dash_gen/: cli.py  config.py  format.py  pipeline.py
kindle_dash_gen/models/: __init__.py  dashboard_data.py  mta.py
kindle_dash_gen/render/: __init__.py  layout.py  prompt.py  toolkit.py
kindle_dash_gen/render/builtins/glanceable/: __init__.py
kindle_dash_gen/sources/: registry.py  toolkit.py
kindle_dash_gen/sources/builtins/mta/: __init__.py  source.py
kindle_dash_gen/sources/builtins/nws/: __init__.py  model.py  source.py
kindle_dash_gen/sources/builtins/open_meteo/: source.py
kindle_dash_gen/sources/builtins/sf_bay_511/: __init__.py  model.py  source.py
kindle_dash_gen_nyc/: __main__.py  cli.py  config.py  format.py  pipeline.py  plugins.py
kindle_dash_gen_nyc/models/: __init__.py  mta.py  weather.py
kindle_dash_gen_nyc/render/: layout.py  postprocess.py  toolkit.py
kindle_dash_gen_nyc/render/layouts/glanceable/: __init__.py
kindle_dash_gen_nyc/sources/: mta.py
tests/: test_cli.py  test_config.py  test_format.py  test_layout.py  test_mta.py  test_pipeline.py  test_plugins.py  test_postprocess.py  test_prompt.py  test_sf_bay_511.py  test_sources.py  test_weather.py
