[project]
name = "kindle-dash-gen-nyc"
version = "0.1.0"
description = "Generate a Kindle e-ink dashboard with NYC weather and subway info."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer==0.26.*",
    "niquests==3.*",
    "nyct-gtfs==2.*",
    "pillow==12.*",
    "pydantic==2.*",
    "jinja2==3.*",
]

[dependency-groups]
dev = [
    "pytest==9.*",
    "niquests-mock==0.4.*",
    "ruff==0.15.*",
]

[tool.uv]
# Run in place from the clone (uv run python -m kindle_dash_gen_nyc); not a built/installed package.
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
